Refactored structure